--- a/crewAI-tools/pyproject.toml
+++ b/crewAI-tools/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "crewai-tools"
-version = "0.25.9"
+version = "0.36.0"
 description = "Set of tools for the crewAI framework"
 readme = "README.md"
 authors = [
@@ -9,24 +9,17 @@ authors = [
 requires-python = ">=3.10,<=3.13"
 dependencies = [
     "pydantic>=2.6.1",
-    "pytest>=8.0.0",
     "lancedb>=0.5.4",
     "openai>=1.12.0",
     "chromadb>=0.4.22",
     "pyright>=1.1.350",
     "pytube>=15.0.0",
     "requests>=2.31.0",
-    "beautifulsoup4>=4.12.3",
-    "selenium>=4.18.1",
-    "docx2txt>=0.8",
     "docker>=7.1.0",
     "embedchain>=0.1.114",
-    "crewai>=0.95.0",
-    "scrapegraph-py>=1.8.0",
-    "serpapi>=0.1.5",
-    "weaviate-client>=4.9.6",
-    "linkup-sdk>=0.2.1",
-    "spider-client>=0.1.25"
+    "crewai>=0.100.0",
+    "click>=8.1.8",
+    "lancedb>=0.5.4",
 ]
 
 [project.urls]
@@ -56,10 +49,64 @@ composio-core = [
 browserbase = [
     "browserbase>=1.0.5",
 ]
+weaviate-client = [
+    "weaviate-client>=4.10.2",
+]
+patronus = [
+    "patronus>=0.0.16",
+]
+serpapi = [
+    "serpapi>=0.1.5",
+]
+beautifulsoup4 = [
+    "beautifulsoup4>=4.12.3",
+]
+selenium = [
+    "selenium>=4.27.1",
+]
+spider-client = [
+    "spider-client>=0.1.25",
+]
+scrapegraph-py = [
+    "scrapegraph-py>=1.9.0",
+]
+linkup-sdk = [
+    "linkup-sdk>=0.2.2",
+]
 
+hyperbrowser = [
+    "hyperbrowser>=0.18.0",
+]
+snowflake = [
+    "cryptography>=43.0.3",
+    "snowflake-connector-python>=3.12.4",
+    "snowflake-sqlalchemy>=1.7.3",
+]
+exa-py = [
+    "exa-py>=1.8.7",
+]
+qdrant-client = [
+    "qdrant-client>=1.12.1",
+]
+
+
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
+
+[tool.uv]
+dev-dependencies = [
+    "pytest>=8.3.4",
+]
 
 [build-system]
 requires = [
     "hatchling",
 ]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pytest-asyncio>=0.25.2",
+    "pytest>=8.0.0",
+]
